Reworked templates syntax